starting to work on the typing gym, plus bootstrap css

--- a/client/gym/mainTemplate.hbs
+++ b/client/gym/mainTemplate.hbs
@@ -1,3 +1,7 @@
-<div id="excerpt-text">
+<div id="excerpt-text" class="starter-template">
   {{text}} 
   </div>
+<p>
+<span id="typedText" style="margin:0px"></span>
+<img src="../cursor.gif" style="margin:-4px" />
+</p>
